--- a/about.Rmd
+++ b/about.Rmd
@@ -7,7 +7,7 @@ output: html_document
 
 ## About this app
 
-This is a draft app to explore Biogeoclimatic projections and associated changes in regeneration feasiblity for tree species at the landscape scale. The purpose of the app at this early stage in its development is to solicit feedback on what types of information will be useful to resource managers. 
+This is a draft app to explore Biogeoclimatic projections at the landscape scale. The purpose of the app at this early stage in its development is to solicit feedback on what types of information will be useful to resource managers. 
 
 ### Contributors
 App created by:<br>
@@ -26,8 +26,8 @@ This app follows the methods described in [MacKenzie and Mahony (2021)](https://
 
 **Climate Variables**--Although there are many types of climate variables in this app, values for many of these variables are estimated from monthly values of three basic climate elements: mean daily maximum temperature (T<sub>max</sub>), mean daily minimum temperature (T<sub>min</sub>), and precipitation (PPT). The method for estimating derived variables is given in [Wang et al. (2016)](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0156720). Since other climate elements (e.g., degree-days, precipitation as snow, frost-free days, cumulative moisture deficit) are not calculated directly from daily data, some caution is warranted. 
 
-**Climate Models**--This app features 8 of the 15 climate models that are available in ClimateBC; the other 7 are excluded because they are downscaled based on only one historical run and may be prone to artefacts as a result. This ensemble of 8 models is a bit lopsided: there is only one model (GISS) with low climate sensitivity. Future versions of this app will use data from a more balanced CMIP6 ensemble available soon from ClimateBC. 
+**Climate Models**--This app features 9 of the 13 climate models that are available in ClimateBC; Three of the models are excluded because their equilibrium climate sensitivity (ECS) exceeds a range supported by multiple lines of evidence (<a href="https://advances.sciencemag.org/content/advances/6/12/eaaz9549.full.pdf" target="_blank">Tokarska et al. 2020</a>; <a href="https://agupubs.onlinelibrary.wiley.com/doi/epdf/10.1029/2019GL086757" target="_blank">Liang et al. 2020</a>; <a href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2019RG000678?fbclid=IwAR0RaslfRZtPcbi_RjZS3wnHWralh0GuoMyJ9NSbgAOOezP0VyTHgrfdlrs" target="_blank">Sherwood et al. 2020</a>). More information on the models and their selection criteria can be found at the <a href='https://bcgov-env.shinyapps.io/cmip6-BC/' target='_blank'>cmip-BC app</a>. 
 
-**Emissions scenario**--This app features a single emissions scenario, RCP4.5, which prescribes a peak in human greenhouse gas emissions by 2050, and a stabilization at half of year-2000 levels from 2070 onwards. This scenario is roughly in line with current national commitments under the Paris accord, and consistent with a global temperature rise of 2.4<sup>o</sup>C by the year 2100. 
+**Emissions scenario**--This app features a single emissions scenario, <a href="https://www.carbonbrief.org/explainer-how-shared-socioeconomic-pathways-explore-future-climate-change" target="_blank">SSP2-4.5</a>, which prescribes a peak in human greenhouse gas emissions by 2040, and a decline towards half of year-1970 emissions by the year 2100. This scenario is roughly in line with current national commitments under the Paris accord, and consistent with a global temperature rise of approximately 2.6<sup>o</sup>C by the year 2100. 
 
 
